--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
     <item android:id="@+id/action_buscar"
         android:icon="@drawable/ic_buscar_white"
         android:title="Buscar"
@@ -9,12 +11,11 @@
     <item android:id="@+id/action_atualizar"
         android:icon="@drawable/ic_atualizar_white"
         android:title="Atualizar"
-        app:showAsAction="ifRoom" /> <!-- Se tiver espaço mostra o icon, se não oculta-->
+        app:showAsAction="ifRoom" />
 
     <item android:id="@+id/action_config"
         android:icon="@drawable/ic_configuracoes_white"
         android:title="Configurações"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
-    <!-- Criar mais um item de menu capa configurações showAsAction="never"-->
-</menu>
+    </menu>
