--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,14 +4,14 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/dse_primary</item>
         <item name="colorPrimaryVariant">@color/dse_primary</item>
-        <item name="colorOnPrimary">@color/dse_background</item>
+        <item name="colorOnPrimary">@color/dse_text</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/dse_secondary</item>
-        <item name="colorSecondaryVariant">@color/dse_secondary</item>
+        <item name="colorSecondaryVariant">@color/dse_subtext</item>
         <item name="colorOnSecondary">@color/dse_text</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <item name="android:textColor">#53ea12</item>
+        <item name="android:textColor">@color/dse_text</item>
         <!-- Customize your theme here. -->
     </style>
 
