--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,13 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Faça seu Login"
-        android:textSize="20dp" />
+        android:textSize="25dp"
+        android:layout_centerInParent="true" />
 
     <TextView
         android:id="@+id/usuario"
         android:layout_width="match_parent"
         android:layout_height="29dp"
-        android:text="Usuário" />
+        android:text="Usuário"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/campo_usuario"
@@ -24,33 +27,39 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Usuário" />
+        android:hint="Usuário"
+        android:textSize="15dp"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/senha"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:text="Senha" />
+        android:text="Senha"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/campo_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Senha" />
+        android:hint="Senha"
+        android:inputType="textPassword"
+        android:textSize="15dp"
+        android:layout_marginTop="10dp"/>
 
     <Button
         android:id="@+id/botao_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:text="Login"
+        android:layout_marginTop="10dp"/>
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/leandro_prensados" />
-
-
 
 </LinearLayout>
