card view com recyler view

--- a/app/src/main/res/layout/activity_novo_pedido.xml
+++ b/app/src/main/res/layout/activity_novo_pedido.xml
@@ -8,6 +8,27 @@
     android:orientation="vertical"
     tools:context=".NovoPedido">
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!-- Colocar cardview com as disciplinas-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerDisciplinas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:cacheColorHint="@android:color/transparent"
+            android:clipToPadding="false"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:listSelector="@android:color/transparent"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical">
+        </androidx.recyclerview.widget.RecyclerView>
+    </ScrollView>
+
     <include layout="@layout/toolbar" />
+
+
 
 </LinearLayout>
