--- a/app/src/main/res/layout/activity_novo_pedido.xml
+++ b/app/src/main/res/layout/activity_novo_pedido.xml
@@ -9,26 +9,34 @@
     tools:context=".NovoPedido">
 
 
-    <ScrollView
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!-- Colocar cardview com as disciplinas-->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerDisciplinas"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:cacheColorHint="@android:color/transparent"
-            android:clipToPadding="false"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            android:listSelector="@android:color/transparent"
-            android:scrollbarStyle="outsideOverlay"
-            android:scrollbars="vertical">
-        </androidx.recyclerview.widget.RecyclerView>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Nome" />
 
-    <include layout="@layout/toolbar" />
+    <EditText
+        android:id="@+id/editTextTextPersonName3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Produto" />
 
+    <EditText
+        android:id="@+id/editTextTextPersonName4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Preço" />
 
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
