--- a/app/src/main/res/layout/activity_novo_pedido.xml
+++ b/app/src/main/res/layout/activity_novo_pedido.xml
@@ -38,5 +38,5 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Salvar pedido" />
 </LinearLayout>
